<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.polymtl.squatr.LeaderboardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboardlist"
        android:id="@+id/WinningList"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lblBatterie"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalFlagsText"
        android:id="@+id/TotalFlag"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:layout_below="@+id/WinningList"
        android:paddingTop="10sp"
        android:paddingLeft="0dp" />

    <ListView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:id="@+id/leaderboardListView"
        android:choiceMode="none"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TotalFlag" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalMazeGame"
        android:id="@+id/TotalFlagMaze"
        android:layout_alignTop="@+id/TotalFlag"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:paddingTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalLightGame"
        android:id="@+id/TotalFlagLight"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:layout_above="@+id/leaderboardMazeListView"
        android:layout_alignStart="@+id/leaderboardLightListView" />

    <ListView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:id="@+id/leaderboardMazeListView"
        android:choiceMode="none"
        android:paddingLeft="30sp"
        android:layout_alignTop="@+id/leaderboardListView"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:id="@+id/leaderboardLightListView"
        android:choiceMode="none"
        android:paddingRight="0dp"
        android:layout_below="@+id/TotalFlagLight"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
